--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,13 +2,14 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     database-platform: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:h2:file:./data/demo
+    url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
+    initialization-mode: always
   data:
     web:
       pageable:
