--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -5,10 +5,11 @@ spring:
       ddl-auto: none
     database-platform: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:h2:file:./data/demo
+    url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
+    initialization-mode: always
   data:
     web:
       pageable:
